--- a/Abbohubb/templates/login.html
+++ b/Abbohubb/templates/login.html
@@ -29,7 +29,7 @@
         }
 
         h2 {
-            color: #4CAF50;
+            color: #9133bb;
             margin-bottom: 20px;
         }
 
@@ -54,7 +54,7 @@
         }
 
         button {
-            background-color: #4CAF50;
+            background-color: #9133bb;
             color: white;
             border: none;
             padding: 10px;
@@ -65,7 +65,7 @@
         }
 
         button:hover {
-            background-color: #45a049;
+            background-color: #1bd3c6;
         }
 
         .alert {
@@ -88,7 +88,7 @@
         .back-link {
             display: block;
             margin-top: 15px;
-            color: #4CAF50;
+            color: #9133bb;
             text-decoration: none;
             font-size: 0.9rem;
         }
