--- a/Abbohubb/templates/vergelijk.html
+++ b/Abbohubb/templates/vergelijk.html
@@ -24,7 +24,7 @@
 
         /* Hoofdnavigatie */
         nav {
-            background-color: #4CAF50;
+            background-color: #9133bb;
             padding: 10px 0;
         }
         nav ul {
@@ -47,7 +47,7 @@
         }
 
         header {
-            background-color: #4CAF50;
+            background-color: #9133bb;
             color: white;
             padding: 20px 0;
             text-align: center;
@@ -100,7 +100,7 @@
             font-weight: bold;
         }
         .vergelijk-tabel thead {
-            background-color: #4CAF50;
+            background-color: #9133bb;
             color: white;
         }
         .vergelijk-tabel th, .vergelijk-tabel td {
@@ -119,7 +119,7 @@
             background-color: #e9ffe9;
         }
         .vergelijk-tabel a {
-            color: #4CAF50;
+            color: #9133bb;
             text-decoration: none;
             font-weight: bold;
         }
@@ -131,7 +131,7 @@
             display: inline-block;
             padding: 10px 20px;
             margin: 10px 0;
-            background-color: #ef882e;
+            background-color: #f4cd00;
             color: white;
             border: none;
             border-radius: 4px;
@@ -176,7 +176,7 @@
         }
         .badge {
     display: inline-block;
-    background-color: #ecb718bd;
+    background-color: ##cd95ccbd;
     color: white;
     padding: 5px 10px;
     font-size: 0.85rem;
