--- a/Abbohubb/static/styles.css
+++ b/Abbohubb/static/styles.css
@@ -26,7 +26,7 @@ main {
 
 /* ========== HEADER ========== */
 header {
-    background: #9133bb; /* Aangepast: header achtergrond naar #9133bb */
+    background: #645394; /* Aangepast: header achtergrond naar #9133bb */
     color: white;
     padding: 15px 10px;
     text-align: center;
